update to binary crossentropy

--- a/Evaluation.ipynb
+++ b/Evaluation.ipynb
@@ -220,8 +220,7 @@
     "print('vacobulary size: %i / limit: %i' % (len(word_index), MAX_NUM_WORDS))\n",
     "\n",
     "# Padding all sequences to same length of `MAX_SEQ_LENGTH`\n",
-    "data   = pad_sequences(sequences, maxlen=MAX_SEQ_LENGTH, padding='post')\n",
-    "labels = to_categorical(np.asarray(labels))"
+    "data   = pad_sequences(sequences, maxlen=MAX_SEQ_LENGTH, padding='post')"
    ]
   },
   {
@@ -323,7 +322,7 @@
     "    )\n",
     "    \n",
     "    model.compile(\n",
-    "        loss='categorical_crossentropy',\n",
+    "        loss='binary_crossentropy',\n",
     "        optimizer=Adadelta(clipvalue=3),\n",
     "        metrics=['accuracy']\n",
     "    )\n",
@@ -490,8 +489,7 @@
    "source": [
     "sequences_test = tokenizer.texts_to_sequences(X_test)\n",
     "\n",
-    "X_test = pad_sequences(sequences_test, maxlen=MAX_SEQ_LENGTH, padding='post')\n",
-    "y_test = to_categorical(np.asarray(y_test))"
+    "X_test = pad_sequences(sequences_test, maxlen=MAX_SEQ_LENGTH, padding='post')"
    ]
   },
   {
