removing unused parts

--- a/Evaluation.ipynb
+++ b/Evaluation.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "from nltk.corpus import stopwords\n",
     "from keras.utils import to_categorical\n",
-    "from keras.callbacks import ModelCheckpoint, TensorBoard, ReduceLROnPlateau\n",
+    "from keras.callbacks import ModelCheckpoint, ReduceLROnPlateau\n",
     "from keras.preprocessing.text import Tokenizer\n",
     "from keras.preprocessing.sequence import pad_sequences\n",
     "from keras.models import load_model\n",
@@ -105,8 +105,6 @@
     "    \n",
     "    # Lowercase\n",
     "    doc = doc.lower()\n",
-    "    # Removing multiple whitespaces\n",
-    "    doc = re.sub(r\"\\?\", \" \\? \", doc)\n",
     "    # Remove numbers\n",
     "    doc = re.sub(r\"[0-9]+\", \"\", doc)\n",
     "    # Split in tokens\n",
