--- a/Evaluation.ipynb
+++ b/Evaluation.ipynb
@@ -81,7 +81,7 @@
     "        - Removing punctuations\n",
     "        - Removing short words\n",
     "    \"\"\"\n",
-    "    stop_words = set(stopwords.words('english'))\n",
+    "    ###stop_words = set(stopwords.words('english'))\n",
     "    \n",
     "    # Lowercase\n",
     "    doc = doc.lower()\n",
@@ -90,7 +90,7 @@
     "    # Split in tokens\n",
     "    tokens = doc.split()\n",
     "    # Remove Stopwords\n",
-    "    ###tokens = [w for w in tokens if not w in stop_words] #für IMDB suckt das mega\n",
+    "    ###tokens = [w for w in tokens if not w in stop_words]\n",
     "    # Remove punctuation\n",
     "    ###tokens = [w.translate(str.maketrans('', '', string.punctuation)) for w in tokens]\n",
     "    # Tokens with less then two characters will be ignored\n",
